[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["voidumbrella <voidumbrella@gmail.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
permutohedron = "0.2.4"

[dependencies.regex]
version = "1.3"
default-features = false
features = ["std", "perf"]
